--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
-fastapi==0.115.6
-uvicorn[standard]==0.34.0
-requests==2.32.3
+fastapi>=0.110.0
+uvicorn[standard]>=0.27.0
+pydantic>=2.6.0,<3
+python-dotenv>=1.0.1
+google-genai>=0.7.0
