--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-fastapi>=0.110.0
-uvicorn[standard]>=0.27.0
-pydantic>=2.6.0,<3
-python-dotenv>=1.0.1
-google-genai>=0.7.0
+fastapi
+uvicorn
+pydantic
+python-dotenv
+google-generativeai
