--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-fastapi
-uvicorn
-pydantic
-python-dotenv
-google-generativeai
+fastapi>=0.110
+uvicorn[standard]>=0.23
+pydantic>=2.0
+python-dotenv>=1.0
+google-generativeai>=0.7
