--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
-fastapi>=0.110
-uvicorn[standard]>=0.23
-pydantic>=2.0
-python-dotenv>=1.0
-google-generativeai>=0.7
+fastapi==0.111.0
+uvicorn==0.30.1
+pydantic==2.7.4
+
+python-dotenv==1.0.1
+httpx==0.27.0
+
+# Google Gemini (official GenAI SDK)
+google-genai
