--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,5 @@
-fastapi==0.111.0
-uvicorn==0.30.1
-pydantic==2.7.4
-
-python-dotenv==1.0.1
-httpx==0.27.0
-
-# Google Gemini (official GenAI SDK)
-google-genai
+fastapi>=0.110.0
+uvicorn[standard]>=0.27.0
+pydantic>=2.6.0,<3
+python-dotenv>=1.0.1
+google-genai>=0.7.0
