--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,5 @@ uvicorn[standard]>=0.27.0
 pydantic>=2.6.0,<3
 python-dotenv>=1.0.1
 google-genai>=0.7.0
+SQLAlchemy>=2.0.0,<3
+psycopg2-binary>=2.9.0,<3
