--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,10 @@ fastapi>=0.110.0
 uvicorn[standard]>=0.27.0
 pydantic>=2.6.0,<3
 python-dotenv>=1.0.1
-google-genai>=0.7.0
+google-generativeai>=0.8.0
+openai>=1.0.0
+anthropic>=0.25.0
+httpx>=0.27.0
 SQLAlchemy>=2.0.0,<3
 psycopg2-binary>=2.9.0,<3
 redis>=5.0.0
